// Vitest Snapshot v1

exports[`useGame > ブロックの操作 > left に移動できて、壁は突き抜けないこと 1`] = `
"1111111111110
1          11
1 11       12
1 11       13
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1          119
1          120
11111111111121"
`;

exports[`useGame > ブロックの操作 > left に移動できて、壁は突き抜けないこと 2`] = `
"1111111111110
1          11
111        12
111        13
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1          119
1          120
11111111111121"
`;

exports[`useGame > ブロックの操作 > left に移動できて、壁は突き抜けないこと 3`] = `
"1111111111110
1          11
111        12
111        13
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1          119
1          120
11111111111121"
`;

exports[`useGame > ブロックの操作 > right に移動できて、壁は突き抜けないこと 1`] = `
"1111111111110
1          11
1       11 12
1       11 13
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1          119
1          120
11111111111121"
`;

exports[`useGame > ブロックの操作 > right に移動できて、壁は突き抜けないこと 2`] = `
"1111111111110
1          11
1        1112
1        1113
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1          119
1          120
11111111111121"
`;

exports[`useGame > ブロックの操作 > right に移動できて、壁は突き抜けないこと 3`] = `
"1111111111110
1          11
1        1112
1        1113
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1          119
1          120
11111111111121"
`;

exports[`useGame > ブロックの操作 > 下に移動できて、一番下まで行ったら次のブロックが追加されること 1`] = `
"1111111111110
1          11
1          12
1          13
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1    11    118
1    11    119
1          120
11111111111121"
`;

exports[`useGame > ブロックの操作 > 下に移動できて、一番下まで行ったら次のブロックが追加されること 2`] = `
"1111111111110
1          11
1          12
1          13
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1    11    119
1    11    120
11111111111121"
`;

exports[`useGame > ブロックの操作 > 下に移動できて、一番下まで行ったら次のブロックが追加されること 3`] = `
"1111111111110
1          11
1    11    12
1    11    13
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1    11    119
1    11    120
11111111111121"
`;

exports[`useGame > ブロックの操作 > 回転できること 1`] = `
"1111111111110
1    55    11
1    5     12
1    5     13
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1          119
1          120
11111111111121"
`;

exports[`useGame > ブロックの操作 > 回転できること 2`] = `
"1111111111110
1          11
1    555   12
1      5   13
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1          119
1          120
11111111111121"
`;

exports[`useGame > ブロックの操作 > 回転できること 3`] = `
"1111111111110
1     5    11
1     5    12
1    55    13
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1          119
1          120
11111111111121"
`;

exports[`useGame > ブロックの操作 > 回転できること 4`] = `
"1111111111110
1          11
1    5     12
1    555   13
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1          119
1          120
11111111111121"
`;

exports[`useGame > ブロックの操作 > 回転できること 5`] = `
"1111111111110
1    55    11
1    5     12
1    5     13
1          14
1          15
1          16
1          17
1          18
1          19
1          110
1          111
1          112
1          113
1          114
1          115
1          116
1          117
1          118
1          119
1          120
11111111111121"
`;

exports[`useGame > 新しいブロックが置けないと終了すること 1`] = `
"1111111111110
1          11
1          12
1    11    13
1    11    14
1    11    15
1    11    16
1    11    17
1    11    18
1    11    19
1    11    110
1    11    111
1    11    112
1    11    113
1    11    114
1    11    115
1    11    116
1    11    117
1    11    118
1    11    119
1    11    120
11111111111121"
`;
